project1/tests/p14c1.rc
int a;

structdef MYS {
    int x;
    int y;
    MYS() { // Ctor
     x = 0;             // error
    }

    function : int foo() {
     return a+y;            // Error
    }
};